# slam

./: .gitignore  README.md  SLAM_Visualizer.ini  app.py  images_to_video.py  main.py  pyproject.toml  pyrightconfig.json  run_visualizer.py  test_data_folder.py  test_triangulation.py  triangulation.py  video.py  visualizer.ini
slam/: __init__.py  coordinate_mapping_check.py  data.py  feature.py  feature_detection.py  imu_initialization.py  plot.py  slam.py  slam_solver.py  solve.py  stereo_matching.py  util.py
slam/viz/: __init__.py  camera_frame_tab.py  camera_frames.py  slam_tab.py  triangulation_tab.py
typings/gtsam/: __init__.pyi  gtsam.pyi  gtsfm.pyi
typings/gtsam/examples/: CustomFactorExample.pyi  DogLegOptimizerExample.pyi  GPSFactorExample.pyi  IMUKittiExampleGPS.pyi  ImuFactorExample.pyi  ImuFactorISAM2Example.pyi  OdometryExample.pyi  PlanarManipulatorExample.pyi  PlanarSLAMExample.pyi  Pose2ISAM2Example.pyi  Pose2SLAMExample_g2o.pyi  Pose2SLAMExample_lago.pyi  Pose3ISAM2Example.pyi  Pose3SLAMExample_g2o.pyi  PreintegrationExample.pyi  SFMExample.pyi  SFMExample_bal.pyi  SFMdata.pyi  ShonanAveragingCLI.pyi  SimpleRotation.pyi  TranslationAveragingExample.pyi  VisualISAM2Example.pyi  VisualISAMExample.pyi
ui/: _utils.py  camera_frames_tab.py  config_view.py  coordinate_mapping_check_view.py  coordinate_mapping_view.py  data_range_view.py  data_tab.py  data_view.py  feature_detection_view.py  imu_initialization_view.py  slam_tab.py  slam_view.py  stereo_matching_view.py  time_range_view.py  triangulation_tab.py  triangulation_view.py  utils.py
(+6 files in other folders)
