[project]
name = "slam"
version = "0.1.0"
description = "simultaneous localization and mapping"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "imgui-bundle",
    "opencv-python",
    "pyyaml",
    "scipy",
    "gtsam",
]

[tool.setuptools.packages.find]
include = ["slam*", "ui*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
